--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "node-schedule": "^2.0.0"
+    "node-schedule": "^2.0.0",
+    "socket.io": "^4.0.0"
   }
 }
